--- a/style.css
+++ b/style.css
@@ -732,14 +732,14 @@ header .navigation li a:hover {
     .banner .content {
         width: 100%;
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
         align-items: center;
         flex-direction: column;
         text-align: center;
     }
 
     .banner .content .textBox h2 {
-        margin-top: 150px;
+        margin-top: 0;
     }
 
     .banner .content .textBox h2 {
@@ -751,9 +751,9 @@ header .navigation li a:hover {
     .content .textBox {
         position: relative;
         width: 400px;
-        margin-top: -30px;
-        margin-left: 10px;
-        margin-right: 10px;
+        margin-top: 0;
+        margin-left: 0;
+        margin-right: 0;
         justify-content: center;
     }
 
